Form validation on signup form prevents signups with too short passwords + using userapp css which makes social signup icons more colorful

--- a/fork-src/css/userapp.css
+++ b/fork-src/css/userapp.css
@@ -94,3 +94,6 @@ body {
   background: #1671AC;
   color: white;
 }
+
+.ng-invalid.ng-dirty {border-color:#FA787E;}
+/*.ng-valid.ng-dirty {border-color:#78FA89;}*/
